--- a/shop.html
+++ b/shop.html
@@ -371,9 +371,9 @@
         <img class="logo" src="img/logo.png" alt="" />
         <h4>Contact</h4>
         <p>
-          <strong>Address:</strong> 555 Wellinton Road,Street 32, San Francisco
+          <strong>Address:</strong> 999 Rua Fake,Street 32, San Diego
         </p>
-        <p><strong>Phone:</strong> (18)999999999</p>
+        <p><strong>Phone:</strong> (84)999999999</p>
         <p><strong>Hours:</strong> 07:00 - 18:00,Mon - Sat</p>
         <div class="follow">
           <h4>Follow us</h4>
@@ -416,7 +416,7 @@
       </div>
 
       <div class="copyright">
-        <p>© 2022, created by <a href="#">Matheus Altrão</a></p>
+        <p>© 2022, created by <a href="#">Wendel Gomes</a></p>
       </div>
     </footer>
 
